2008-02-24  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefields/forcefieldghemical.cpp: Small change for the new
	derivatives.

2008-02-24  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/forcefield.cpp: Output the number of possible rotamers when
	doing rotor search -- as a long unsigned int.
	Remove old derivatives in favor of BALL analogues.

	* include/openbabel/forcefield.h: Remove old derivatives in favor
	of BALL analogues.

	* src/forcefields/forcefieldmmff94.cpp: Ditto.
	
	* src/forcefielduff.cpp: More checks for real numbers, uncovered
	doing WeightedRotorSearch.

2008-02-24  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp: Added VectorAngleDerivative_BALL,
	VectorTorsionDerivative_BALL and VectorOOPDerivative_BALL.

	* src/forcefields/forcefieldmmff94.cpp: Use it. MMFF94 now has
	analytical gradients.

2008-02-23  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/rotamer.cpp (SetCurrentCoordinates): Allow -1 as a rotor
	setting -- implies do not change the dihedral angle.
	Some general code cleanups.

	* src/forcefield.cpp (WeightedRotorSearch): Fix some bugs -- check
	rotors without changing other dihedral angles and make sure to
	update the conformer structure after the search.

2008-02-22  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/atom.cpp (GetAngle): Return 0.0 for the angle if the vectors
	are too small. (The angle is ill-defined in these cases, so this
	is better than returning NaN.)

	* src/forcefield.cpp: Hunting down more divide-by-zero bugs.

	* src/forcefields/forcefieldghemical.cpp: Remove some rare
	divide-by-zero errors (e.g., when atoms are on top of each other).

	* src/forcefields/forcefielduff.cpp: Ditto.

2008-02-22 Chris Morley

	* src/mol.cpp(AssignSpinMultiplicity): Move the functionality
	recently removed from AddHydrogens() to here. Don't assign spin
	multiplicity to multi-atom molecules with no bonds.
	Molecules specified only by elemental formula from thermoformat,